<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_profile"/>
    <item
        android:id="@+id/tab_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_tab_settings"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_feedback"/>
    <item
        android:id="@+id/official_website"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_website"/>

</menu>