<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/view_wait"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_icon"
                    tools:src="@drawable/ic_launcher"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="10.0"
                    android:textColor="@android:color/white"
                    android:textSize="23sp"
                    tools:text="Justaway"/>

                <TextView
                    android:id="@+id/lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="10.0"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="6dp"
                    android:text="@string/fontello_lock"
                    tools:text="鍵"/>
            </LinearLayout>

            <TextView
                android:id="@+id/screen_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="5.0"
                android:shadowDy="5.0"
                android:shadowRadius="10.0"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="justawayfactory"/>

            <TextView
                android:id="@+id/followed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="5.0"
                android:shadowDy="5.0"
                android:shadowRadius="10.0"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:text="@string/label_followed_by_target"/>
        </LinearLayout>

        <Button
            android:id="@+id/follow"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="right|bottom"
            android:textColor="?attr/holo_blue"
            android:background="?attr/button_stateful"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="14sp"
            tools:text="@string/button_unfollow"/>
</FrameLayout>